--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@ __pycache__/
 # Environments
 lynch_env/
 
+# Personal data
+alpha_vantage_api_key.txt
+
 # Distribution / packaging
 .Python
 build/
